Added basic styling, overhauled accessibility: inputs have <label elements>, keyboard navigation is easier

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ report/project-usability-report.pdf
 report/project-usability-report.synctex.gz
 report/project-usability-report.toc
 database/main.db
+report/project-usability-report.blg
